<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Overview</string>
    <string name="menu_gallery">Application</string>
    <string name="menu_settings">Account Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="error">Error</string>
    <string name="login_error_text">Login failed.</string>
    <string name="ok_text">OK</string>

    <string name="hardware">Show virtual keyboard</string>
    <string name="show_ime">Keep it on screen while physical keyboard is active</string>
    <string name="select_input_method">Choose input method</string>



    <string name="passwords_match_error_text">Passwords do not match.</string>
    <string name="try_again_text">Try Again</string>

    <string name="backtologin">Back to Login</string>
    <string name="account"></string>
    <string name="new_account">Welcome to Subscription Manager</string>
    <string name="username">Username</string>
    <string name="login_title">Log in to your Subscription Manager account</string>
    <string name="welcome_message">Glad to see you!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_username">Enter Username</string>
    <string name="main_title">Subscription Manager</string>
    <string name="app_name">Subscription Manager</string>
    <string name="title">Subscription Manager</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
	
	<string name="new_subscription">New Subscription</string>
	<string name="subscription_name">Name</string>
	<string name="enter_subscription_name">Enter Subscription Name</string>
	<string name="subscription_cost">Cost</string>
	<string name="next_due_date">Next Due Date</string>
	<string name="create_subscription">Create Subscription</string>
	<string name="go_to_applications">Go To Applications</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

</resources>